<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Instagram</string>

    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rider">Map</string>
    <string name="title_activity_driver_location">Map</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="user_name">UserName</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="signin_text">or, Login</string>
    <string name="instagram">Instagram</string>
    <string name="login">Login</string>
    <string name="signup_text">or, Sign Up</string>
</resources>
